src/test/deca/codegen/invalid/divZero2.deca
{
    int a = 0;
    int b = 6;
    float c = b/a;
}
//ERROR Error : divided by zero.